--- a/package.json
+++ b/package.json
@@ -3,7 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node build/index.js",
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node index.ts"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.9.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^2.0.1",
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^1.4.13",
+    "prisma": "^6.9.0",
+    "ts-node-dev": "^2.0.0"
   },
   "repository": {
     "type": "git",
@@ -12,20 +33,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Tariq-Monowar/roktalap-backend/issues"
-  },
   "homepage": "https://github.com/Tariq-Monowar/roktalap-backend#readme",
-  "description": "",
-  "dependencies": {
-    "@prisma/client": "^6.9.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/morgan": "^1.9.10",
-    "prisma": "^6.9.0"
-  }
+  "description": ""
 }
